# cost_accounting_backend

./: .gitignore  .pre-commit-config.yaml  README.md  finance.db  main.py  pyproject.toml
app/: database.py  dependency.py  enum.py  models.py  schemas.py
app/api/v1/: operations.py  users.py  wallets.py
app/repository/: operations.py  users.py  wallets.py
app/service/: exchange_service.py  operations.py  users.py  wallets.py
app/static/: index.html
app/static/js/: app.js
tests/: conftest.py
tests/test_api/: test_operations.py
