[project]
name = "cost-accounting"
version = "0.1.0"
description = ""
authors = [
    {name = "ivxmirov",email = "iterum343@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "cost_accounting", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)"
]
dev = [
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.pylint."messages control"]
# Only show warnings with the listed confidence levels. Leave empty to show all.
# Valid levels: HIGH, CONTROL_FLOW, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
confidence = [
    "HIGH",
    "CONTROL_FLOW",
    "INFERENCE",
    "INFERENCE_FAILURE",
    "UNDEFINED",
]

disable = [
  "C0103",  # invalid-name
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring
  "R0903",  # too-few-public-methods
  "R0913",  # too-many-arguments,
  "R0917",  # too-many-positional-arguments,
  "import-error",
  "no-name-in-module",
  "wrong-import-order",
]

[tool.pylint.master]
ignore-patterns = []
extension-pkg-allow-list = ["pytest", "sqlalchemy"]

[tool.pylint."tests"]
disable = [
    "redefined-outer-name",
    "missing-function-docstring",
    "protected-access",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
ensure_newline_before_comments = true
